--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="container">
       <div class="profile">
-        <img src="file:///C:/Users/Abubucker%20Siddique/OneDrive/Desktop/soorya/soorya.jpg" alt="Soorya M" class="profile-img">
+        <img src="soorya.jpg" alt="Soorya M" class="profile-img">
         <h1>Soorya M</h1>
         <p>Student | Web Developer | UI/UX Designer</p>
         <div class="contact-info">
